projects-new/P11-ZERO-TRUST-SECURITY/k8s/spire-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: spire-agent
  namespace: spire
  labels:
    app: spire-agent
spec:
  selector:
    matchLabels:
      app: spire-agent
  template:
    metadata:
      labels:
        app: spire-agent
    spec:
      hostPID: true
      serviceAccountName: spire-agent
      tolerations:
        - operator: "Exists"
      containers:
        - name: spire-agent
          image: ghcr.io/spiffe/spire-agent:1.9.5
          args:
            - "-config"
            - "/run/spire/config/agent.conf"
          volumeMounts:
            - name: spire-agent-config
              mountPath: /run/spire/config
            - name: spire-agent-sockets
              mountPath: /run/spire/sockets
            - name: spire-agent-data
              mountPath: /run/spire/data
            - name: socket-dir
              mountPath: /var/run
      volumes:
        - name: spire-agent-config
          configMap:
            name: spire-agent
            items:
              - key: agent.conf
                path: agent.conf
        - name: spire-agent-sockets
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
        - name: spire-agent-data
          emptyDir: {}
        - name: socket-dir
          hostPath:
            path: /var/run
            type: Directory
